--- a/package.json
+++ b/package.json
@@ -1,36 +1,39 @@
 {
-  "_from": "hexo-theme-amazing@^5.0.0",
-  "_id": "hexo-theme-amazing@5.0.0",
-  "_inBundle": false,
-  "_integrity": "sha512-8u6l4FCVR4/Yo6066nuHPec5TmkuD9G1Pgyu3Djhi+T6/T5bEIgiAUwIjyD3xXgqQY3i8CKSB7AdISOFVosOzA==",
-  "_location": "/hexo-theme-amazing",
-  "_phantomChildren": {},
-  "_requested": {
-    "type": "range",
-    "registry": true,
-    "raw": "hexo-theme-amazing@^5.0.0",
-    "name": "hexo-theme-amazing",
-    "escapedName": "hexo-theme-amazing",
-    "rawSpec": "^5.0.0",
-    "saveSpec": null,
-    "fetchSpec": "^5.0.0"
-  },
-  "_requiredBy": [
-    "#USER",
-    "/"
+  "name": "hexo-theme-fantastic",
+  "version": "0.0.0",
+  "license": "MIT",
+  "description": "A simple, delicate, and modern theme for Hexo",
+  "keywords": [
+    "hexo",
+    "theme",
+    "icarus",
+    "amazing",
+    "fantastic"
   ],
-  "_resolved": "https://registry.npmjs.org/hexo-theme-amazing/-/hexo-theme-amazing-5.0.0.tgz",
-  "_shasum": "9f96ee5c948ab11f77dfe420464e08229184eb35",
-  "_spec": "hexo-theme-amazing@^5.0.0",
-  "_where": "/opt/blog/blog5",
-  "author": {
-    "name": "removeif",
-    "email": "removeif@users.noreply.github.com"
+  "homepage": "https://github.com/skyclouds2001/hexo-theme-fantastic#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skyclouds2001/hexo-theme-fantastic.git"
   },
   "bugs": {
-    "url": "https://github.com/removeif/hexo-theme-amazing/issues"
+    "url": "https://github.com/skyclouds2001/hexo-theme-fantastic/issues",
+    "email": "skyclouds2001@163.com"
   },
-  "bundleDependencies": false,
+  "author": {
+    "name": "skyclouds2001",
+    "email": "skyclouds2001@163.com",
+    "url": "https://skyclouds2001.github.io"
+  },
+  "contributors": [
+    "skyclouds2001"
+  ],
+  "packageManager": "npm@10.2.1",
+  "engines": {
+    "node": ">=12.13.0"
+  },
+  "scripts": {
+    "lint": "eslint --ext .js --ext .jsx --ext .json ."
+  },
   "dependencies": {
     "deepmerge": "^4.2.2",
     "hexo-component-inferno": "^2.0.3",
@@ -41,8 +44,6 @@
     "hexo-generator-index": "^2.0.0",
     "semver": ">=5.0.0"
   },
-  "deprecated": false,
-  "description": "A simple, delicate, and modern theme for Hexo",
   "devDependencies": {
     "bulma-stylus": "0.8.0",
     "eslint": "^8.39.0",
@@ -56,18 +57,6 @@
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-util": "^2.2.0"
   },
-  "engines": {
-    "node": ">=12.13.0"
-  },
-  "homepage": "https://github.com/removeif/hexo-theme-amazing",
-  "keywords": [
-    "hexo",
-    "theme",
-    "icarus",
-    "amazing"
-  ],
-  "license": "MIT",
-  "name": "hexo-theme-amazing",
   "peerDependencies": {
     "bulma-stylus": "0.8.0",
     "hexo": "^5.0.2",
@@ -76,13 +65,5 @@
     "hexo-renderer-inferno": "^0.1.3",
     "hexo-renderer-stylus": "^2.0.0",
     "hexo-util": "^2.2.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/removeif/hexo-theme-amazing.git"
-  },
-  "scripts": {
-    "lint": "eslint --ext .js --ext .jsx --ext .json ."
-  },
-  "version": "5.0.1"
+  }
 }
